# autoconf

arguments/: configure.ac
basic-checks/: configure.ac
c-preprocessor/: configure.ac
libraries/: Makefile.am  configure.ac  create-configure.sh  my_library.cpp
looking-for-headers/: configure.ac
testing-for-libraries/: configure.ac
