
#AC_INIT(
#    [My Library], [0.5], [neris.marrony@gmail.com],
#    [my_library], [http://github.org/marrony]
#)

AC_INIT(mylibrary, version-0.1)

AC_PREREQ([2.64])
AC_PROG_CXX

AM_INIT_AUTOMAKE([1.11 -Wall no-define])

AM_PROG_AR
LT_INIT

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
